make styling compatible for firefox and safari, fix home button issue (was behind a div so could barely click on it)

--- a/equations/static/css/game.css
+++ b/equations/static/css/game.css
@@ -106,6 +106,8 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    position: relative;
+    z-index: -1;
 }
 
 .main.left.top p, h3 {
@@ -375,14 +377,16 @@ body {
 .resources {
     height: 24vh;
 
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
+    /* display: flex; */
+    display: table;
+    /* flex-direction: column;
+    align-items: stretch; */
 }
 
 .resources.heading {
     /* height: fit-content; */
-    height: 3vw;
+    height: 6vh;
+    /* padding-bottom: 2vh; */
 
     display: flex;
     flex-direction: row;
@@ -407,6 +411,10 @@ body {
     height: fit-content;
 }
 
+.resources.wooden-table {
+    width: 100%;
+}
+
 .resources.heading button {
     font-size: 1vw;
     font-family: monospace;
@@ -420,7 +428,12 @@ body {
 }
 
 .resources.cubes {
-    height: fit-content;
+    height: 10%;
+    width: 100%;
+}
+
+#resources-cubes {
+    padding-left: 0.5vw;
 }
 
 .resources.cubes.playable-area {
@@ -454,7 +467,7 @@ body {
 }
 
 .resources.cards.playable-area th img {
-    width: 6vw;
+    width: 80%;
 }
 
 .show-border {
